FIxing COurts too close to region in cards

--- a/tournaments/static/css/rotating-card.css
+++ b/tournaments/static/css/rotating-card.css
@@ -439,7 +439,7 @@ min-height: none;
 }
 
 .in_out{
-margin-top: -120px;
+margin-top: -110px;
 }
 
 .card-container, .front, .back {
